# Firmware

./: README.md  partitions.csv  platformio.ini
include/: config.h
src/: Audio.cpp  Audio.h  Config.cpp  Config.h  FactoryReset.h  PitchShift.cpp  PitchShift.h  Sensor.cpp  Sensor.h  Sensor_Sht.cpp  Sensor_Sht.h  Voice_assistant.cpp  Voice_assistant.h  lv_conf.h  main.cpp  time_func.h
src/Flags/: Sensor_Pms.cpp  Sensor_Pms.h  Sensor_ui.cpp  espnow_module.cpp  espnow_module.h  led_module.cpp  led_module.h  mqtt_module.cpp  mqtt_module.h  ota_config.h  ota_module.cpp  ota_module.h
src/ui/: CMakeLists.txt  filelist.txt  lv_setup.cpp  lv_setup.h  matter_wrapper.cpp  matter_wrapper.h  ui.c  ui.h  ui_events.c  ui_events.h
src/ui/screens/: ui_Intro.c  ui_Intro.h  ui_PM10graph.c  ui_PM10graph.h  ui_PM1graph.c  ui_PM1graph.h  ui_PM25graph.c  ui_PM25graph.h  ui_PM4graph.c  ui_PM4graph.h  ui_TVOCgraph.c  ui_TVOCgraph.h  ui_dashboard.c  ui_dashboard.h  ui_owl.c  ui_owl.h  ui_qrcode.c  ui_qrcode.h
